--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,19 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  dio: ^5.7.0
+  flutter_bloc: ^9.0.0
+  equatable: ^2.0.0
+  get_it: ^8.0.3
+  fpdart: ^1.1.1
+  cached_network_image: ^3.4.1
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  mocktail: ^1.0.0
   flutter_lints: ^4.0.0
 
 flutter:
