--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
     sdk: flutter
   mocktail: ^1.0.0
   flutter_lints: ^4.0.0
+  bloc_test: ^10.0.0
 
 flutter:
   uses-material-design: true
